<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/homeMain"
        android:icon="@drawable/ic_home_svg"
        android:title="@string/home" />
    <item
        android:id="@+id/paidJobs"
        android:icon="@drawable/ic_job_svg"
        android:title="@string/paidjobs" />

    <item
        android:id="@+id/findJobs"
        android:icon="@drawable/search_png"
        android:title="@string/find_jobs" />
<!--    <item-->
<!--        android:id="@+id/orderHistory"-->
<!--        android:title="@string/orderhistory"-->
<!--        android:icon="@drawable/ic_history_sng"/>-->
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_svg"/>


</menu>
